--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,48 @@
-.App {
+*{box-sizing: border-box}
+
+body {
+  font-family: "Lucida Grande";
+  background-color: #E1C699;
+}
+
+h1 {
+  font-size: 3rem;
+  margin: 40px 20px 20px 20px;
+}
+
+nav {
+  text-align: right;
+}
+
+nav h3 {
+  margin-right: 30px;
+  font-style: italic;
+  font-size: 1.5rem;
+}
+
+ul {
+  float: right;
+  margin: 0 20px 30px 0;
+}
+
+li {
+  list-style: none;
+  float: left;
+  margin-right: 20px;
+}
+
+button {
+  font-size: 1.4rem;
+  border-radius: 4px;
+  width: 30%;
   text-align: center;
+  margin: 0 40% 0 40%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a {
+  text-decoration: none;
+  color: inherit;
+  text-align: center;
+  font-size: 1.3rem;
+  /*margin: 2% 50% 0 50%;*/
 }
