--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ button {
   font-size: 1.6rem;
   font-weight: 700;
   border-radius: 17px;
-  width: 30%;
+  width: 400px;
   height: 100px;
   margin: 40px 0 40px 0;
   background-color: #D7598B;
@@ -75,10 +75,10 @@ a:hover {
 }
 
 .activity {
-  margin: 120px 30px 0 30px;
+  margin: 115px 30px 0 30px;
   /*background-color: rgba(255, 255, 255, 0.3);*/
   /*border-radius: 17px;*/
-  padding: 15px 15px 35px 15px;
+  padding: 15px 15px 35px 0;
 }
 
 .activity div {
@@ -90,4 +90,18 @@ a:hover {
   font-size: 1.9rem;
   font-weight: 900;
   text-shadow: 2px 2px 2px #D7598B;
+}
+
+@media screen and (max-width: 700px) {
+  .activity {
+    background-color: rgba(255, 255, 255, 0.3);
+    padding: 15px 15px 15px 15px;
+    border-radius: 17px;
+  }
+}
+
+@media screen and (max-width: 540px) {
+  body {
+    background-position: center 120px;
+  }
 }
