--- a/src/App.css
+++ b/src/App.css
@@ -13,31 +13,15 @@ body {
 
 h1 {
   font-size: 3rem;
-  margin: 40px 20px 30px 30px;
+  margin: 0 20px 30px 30px;
+  padding-top: 40px;
   border-bottom: #ED6C31 3px solid;
 }
 
 nav {
+  width: 100%;
+  overflow: hidden;
   text-align: left;
-}
-
-nav h3 {
-  margin: 0 0 10px 30px;
-  font-style: italic;
-  font-size: 1.5rem;
-}
-
-ul {
-  float: left;
-  margin: 0 20px 30px 30px;
-  border-bottom: #ED6C31 2px solid;
-  padding: 0 0 10px 0;
-}
-
-li {
-  list-style: none;
-  float: left;
-  margin-right: 20px;
 }
 
 button {
@@ -46,9 +30,10 @@ button {
   border-radius: 17px;
   width: 400px;
   height: 100px;
-  margin: 40px 0 40px 0;
+  margin: 20px 0 30px 0;
   background-color: #D7598B;
   color: #FCC219;
+  border: #FFFFFF 1px solid;
 }
 
 button:hover {
@@ -60,24 +45,80 @@ button:focus {
   outline: 0;
 }
 
+main:focus {
+  outline: 0;
+}
+
+.bm-burger-button {
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  right: 30px;
+  top: 37px;
+  background-color: #ED6C31;
+  background-image: url("hamburger.png");
+  background-size: 35px;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 18px;
+  border: #FFFFFF 1px solid;
+}
+
+.bm-menu {
+  background-color: #D7598B;
+}
+
+.bm-morph-shape {
+  fill: #D7598B;
+}
+
+main button {
+  border: #FFFFFF 1px solid;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+}
+
+.bm-cross-button {
+  background-color: #FCC219;
+  border-radius: 12px;
+  border: #FFFFFF 1px solid;
+}
+
+.bm-cross-button:hover {
+  cursor: pointer;
+  background-color: #ED6C31;
+  box-shadow: 1px 1px 4px 3px #FFFFFF;
+}
+
+h2 {
+  position: fixed;
+  left: 30px;
+  top: 120px;
+  width: 800px;
+  border-bottom: #ED6C31 2px solid;
+  padding-right: 300px;
+  font-style: italic;
+}
+
 a {
   text-decoration: none;
-  color: inherit;
-  text-align: center;
-  font-size: 1.1rem;
-  padding: 2px 2px 2px 2px;
+  color: #FCC219;
+  font-size: 1.5rem;
+  padding: 2px 15px 2px 2px;
+  display: block;
+  width: fit-content;
+  margin: 17% 0 0 5%;
 }
 
 a:hover {
   text-decoration: underline;
   border-radius: 3px;
-  color: #FCC219;
+  color: #FFFFFF;
 }
 
 .activity {
   margin: 115px 30px 0 30px;
-  /*background-color: rgba(255, 255, 255, 0.3);*/
-  /*border-radius: 17px;*/
   padding: 15px 15px 35px 0;
 }
 
@@ -90,13 +131,18 @@ a:hover {
   font-size: 1.9rem;
   font-weight: 900;
   text-shadow: 2px 2px 2px #D7598B;
+  margin: 10px 0 0 0;
+  width: 600px;
+  text-align: left;
 }
 
 @media screen and (max-width: 700px) {
   .activity {
-    background-color: rgba(255, 255, 255, 0.3);
+    /*background-color: rgba(255, 255, 255, 0.3);*/
     padding: 15px 15px 15px 15px;
     border-radius: 17px;
+    width: 80%;
+    overflow: auto;
   }
 }
 
